<resources>
  <string name="app_name">图鉴日图</string>
  <string name="app_name_pinyin">tújiàn</string>
  <string name="bing_wallpaper">必应壁纸</string>
  <string name="apply_theme_color">已应用主题色：#%1$s</string>
  <string name="start_download">开始下载…</string>
  <string name="download">下载</string>
  <string name="update">更新</string>
  <string name="please_open_download_manager">您需要打开文件下载功能</string>
  <string name="go">前往</string>
  <string name="cacel">取消</string>
  <string name="delete_success">删除成功</string>
  <string name="delete_failure">删除失败</string>
  <string name="set_wallpaper_success">设置壁纸成功</string>
  <string name="set_wallpaper_failure">设置壁纸失败</string>
  <string name="start_set_wallpaper">开始设置壁纸</string>
  <string name="repress_exit">再按一次退出</string>
  <string name="already_copied">已复制到剪切板</string>
  <string name="download_settings">下载设置</string>
  <string name="download_notification_visibility_visible">下载过程中可见</string>
  <string name="download_notification_visibility_visible_notify_completed">总是可见</string>
  <string name="download_notification_visibility_visible_notify_only_completion">下载完成时可见</string>
  <string name="download_notification_visibility_hidden">不可见</string>
  <string name="download_allowed_network_type_wifi">仅 Wi-Fi 下载</string>
  <string name="download_allowed_network_type_mobile">仅流量下载</string>
  <string name="download_allowed_network_type_mobile_or_wifi">总是允许下载</string>
  <string name="advance_settings">高级设置</string>
  <string name="dark_theme">暗色主题</string>
  <string name="dark_theme_desc">当前配置暗色主题: </string>
  <string name="wallpaper_settings">壁纸设置</string>
  <string name="wallpaper_settings_desc">启用壁纸切换以及相关设置</string>
  <string name="appwidget_settings">微件设置</string>
  <string name="appwidget_settings_desc">微件相关设置</string>
  <string name="screen_saver_interval">屏保间隔</string>
  <string name="screen_saver_interval_desc">屏幕保护下次显示的间隔</string>
  <string name="muzei_settings">Muzei 设置</string>
  <string name="muzei_settings_desc">Muzei 相关设置</string>
  <string name="update_title">图鉴入土</string>

  <string name="today">今日</string>
  <string name="bing">必应</string>
  <string name="archive">归档</string>
  <string name="history">历史</string>
  <string name="settings">设置</string>
  <string name="about">关于</string>

  <string name="tag_yy">运营</string>

  <string name="enable_switch">壁纸切换</string>
  <string name="enable_switch_desc">是否启用壁纸自动切换</string>
  <string name="switch_interval">切换间隔</string>
  <string name="switch_interval_desc">自动切换的间隔，最低 15 分钟</string>
  <string name="requires_battery_not_low">省电设置</string>
  <string name="requires_battery_not_low_desc">当电量低时停用切换</string>
  <string name="requires_charging">仅充电切换</string>
  <string name="requires_charging_desc">仅允许充电时切换</string>
  <string name="requires_storage_not_low">仅存储空间空闲</string>
  <string name="requires_storage_not_low_desc">仅允许存储空间空闲时切换</string>
  <string name="requires_device_idle">设备闲置切换</string>
  <string name="requires_device_idle_desc">仅允许设备未在使用时切换</string>
  <string name="enable_blur">高斯模糊</string>
  <string name="enable_blur_desc">是否启用高斯模糊</string>
  <string name="blur_value">模糊值</string>
  <string name="blur_value_desc">值越大效果越好</string>
  <string name="enable_pixel">像素化</string>
  <string name="enable_pixel_desc">是否启用像素化</string>
  <string name="pixel_value">像素值</string>
  <string name="pixel_value_desc">值越大像素块越大</string>
  <string name="enable_notification">启用通知</string>
  <string name="enable_notification_desc">当内容切换时，将会在状态栏显示一条通知</string>
  <string name="hitokoto_text_size">一言字体</string>
  <string name="hitokoto_text_size_desc">微件显示一言的字体大小</string>
  <string name="source_text_size">一言来源字体</string>
  <string name="source_text_size_desc">微件显示的一言来源的字体大小</string>
  <string name="auto_text_color">自动文字颜色</string>
  <string name="auto_text_color_desc">根据壁纸主颜色自动调整文字颜色</string>
  <string name="hitokoto_lines">一言行数</string>
  <string name="hitokoto_lines_desc">一言显示的行数，超过行数自动折叠</string>
  <string name="copyright_text_size">版权文字大小</string>
  <string name="copyright_text_size_desc">必应图片版权信息文字大小</string>
  <string name="copyright_text_lines">版权文字行数</string>
  <string name="copyright_text_lines_desc">必应版权信息显示的行数</string>
  <string name="blur_value_format">模糊值：%1$d</string>
  <string name="pixel_value_format">像素值：%1$d</string>
  <string name="text_size_format">文字大小：%1$d</string>
  <string name="lines_format">行数：%1$d</string>
  <string name="no_limit">无限制</string>
  <string name="share">分享</string>
  <string name="set_wallpaper">设为壁纸</string>
  <string name="tag_about_collapsingtoolbarlayout">tag_about_collapsingtoolbarlayout</string>
  <string name="tag_upload_collapsingtoolbarlayout">tag_upload_collapsingtoolbarlayout</string>
  <string name="today_tujian_is_empty">今日图鉴数据为空</string>
  <string name="today_bing_is_empty">今日必应图片数据为空</string>
  <string name="today_bing_wallpaper">今日必应美图</string>
  <string name="top_bar_radius">标题栏圆角</string>
  <string name="top_bar_radius_desc">标题栏的圆角大小</string>
  <string name="top_bar_elevation">标题栏阴影</string>
  <string name="top_bar_elevation_desc">标题栏的阴影高度</string>
  <string name="card_radius">列表项圆角</string>
  <string name="card_radius_desc">列表项的圆角大小</string>
  <string name="card_elevation">列表项阴影</string>
  <string name="card_elevation_desc">列表项阴影的高度</string>
  <string name="card_space">列表项间隔</string>
  <string name="card_space_desc">列表项间隔的宽度</string>
  <string name="no_category_info_available">没有获得分类信息</string>
  <string name="no_category_id_available">没有获取到分类id</string>
  <string name="no_data_available">没有获得数据</string>
  <string name="creature_num">小精灵</string>
  <string name="creature_num_desc">屏保显示时，小精灵出现的最大数量</string>
  <string name="face_detection">面部识别</string>
  <string name="face_detection_desc">屏保显示时是否启用人脸识别</string>
  <string name="fuck_boo">禁用屏保</string>
  <string name="fuck_bool_desc">启用屏保时，小精灵数量不能为0</string>
  <string name="creature_num_format">小精灵数量：%1$d</string>
  <string name="team_info">团队信息</string>
  <string name="osl">开放源代码许可</string>
  <string name="post">投稿</string>
  <string name="label_title">标题</string>
  <string name="label_desc">描述</string>
  <string name="label_poster">投稿人</string>
  <string name="label_poster_email">投稿人邮箱</string>
  <string name="not_selected_picture">您没有选择图片</string>
  <string name="response_is_empty">响应内容为空</string>
  <string name="provider_root_summary">图鉴本地内容管理</string>
  <string name="cant_resolve_selected_picture">无法解析选中图片</string>
  <string name="resolve_upload_result_is_null">解析上传结果为空</string>
  <string name="upload_error">上传文件错误</string>
  <string name="label_url">地址</string>
  <string name="post_error">投稿失败，请重试</string>
  <string name="list_item">列表项</string>
  <string name="top_bar">标题栏</string>
  <string name="screen_saver">屏保</string>
  <string name="search">搜索</string>
  <string name="fei_hua">根据相关法律法规要求，我们更新完善了\n[《图鉴用户协议》]("https://www.dailypics.cn/doc/1")和\n[《图鉴隐私政策》]("https://www.dailypics.cn/doc/2")\n，在您同意并接受后，将可正常使用图鉴日图为您提供的全部功能。\n\n即使您未同意该隐私条款也可正常浏览图鉴日图并下载相关内容，但无法进行投稿，请您悉知。</string>

  <string name="loading_today">正在加载今日图片…</string>
</resources>
