<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/top_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.CollapsingToolbarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?android:windowBackground"
      android:tag="@string/tag_about_collapsingtoolbarlayout"
      app:layout_scrollFlags="scroll|exitUntilCollapsed">

      <io.nichijou.tujian.common.ext.AspectRatioImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_collapseMode="parallax"
        app:layout_collapseParallaxMultiplier="0.7"
        app:aspect_ratio="0.417"
        android:scaleType="centerCrop"/>

      <FrameLayout
        android:id="@+id/boo_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_collapseMode="parallax"
        app:layout_collapseParallaxMultiplier="0.7" />

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_collapseMode="pin"
        app:navigationIcon="?android:attr/homeAsUpIndicator"
        app:title="@string/about"
        app:titleTextAppearance="@style/ToolbarTitleTextAppearance" />
    </com.google.android.material.appbar.CollapsingToolbarLayout>

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/team_info"
        android:textColor="?android:textColorSecondary"
        android:textSize="24sp"
        android:textStyle="bold" />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/team_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false" />

      <View
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

      <TextView
        android:id="@+id/osl_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/osl"
        android:textColor="?android:textColorSecondary"
        android:textSize="12sp"
        android:paddingBottom="20dp"
        android:textStyle="bold" />
    </LinearLayout>
  </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
