<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/top_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <io.nichijou.tujian.widget.CollapsingToolbarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?android:windowBackground"
      app:layout_scrollFlags="scroll|exitUntilCollapsed"
      app:titleEnabled="false">

      <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_collapseMode="parallax"
        app:layout_collapseParallaxMultiplier="0.7"
        app:viewAspectRatio="1.6" />

      <io.nichijou.tujian.widget.TintIcon
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:paddingTop="50dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_twotone_add"
        app:tint="?colorAccent" />

      <ProgressBar
        android:id="@+id/overlay_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        android:visibility="gone"
        android:scaleType="centerInside"
        app:tint="?colorAccent" />

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_collapseMode="pin"
        app:navigationIcon="?android:attr/homeAsUpIndicator"
        app:title="@string/post"
        app:titleTextAppearance="@style/ToolbarTitleTextAppearance" />
    </io.nichijou.tujian.widget.CollapsingToolbarLayout>

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingStart="16dp"
      android:paddingTop="12dp"
      android:paddingEnd="16dp"
      android:paddingBottom="12dp">

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_url_wrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/label_url"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/field_url"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:enabled="false" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/label_title"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/field_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/label_desc"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/field_desc"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/label_poster"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/field_poster"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/label_poster_email"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/field_poster_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/post" />
    </LinearLayout>
  </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
