<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#30000000">

  <LinearLayout
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/update_conner_background"
    android:elevation="20dp"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="24dp"
    android:paddingEnd="8dp">

    <TextView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:tag="beta_title" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center|start"
      android:text="@string/update_title"
      android:textColor="#de000000"
      android:textSize="20sp"
      android:textStyle="bold" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="10dp"
      android:paddingEnd="16dp"
      android:tag="beta_upgrade_info"
      android:textColor="#99000000"
      android:textSize="16sp"
      tools:ignore="RtlSymmetry" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="13dp"
      android:paddingEnd="16dp"
      android:paddingBottom="24dp"
      android:tag="beta_upgrade_feature"
      android:textColor="#99000000"
      android:textSize="16sp"
      tools:ignore="RtlSymmetry" />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end|bottom"
      android:layout_marginBottom="8dp"
      android:orientation="horizontal">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="end"
        android:gravity="center"
        android:minWidth="64dp"
        android:paddingHorizontal="8dp"
        android:tag="beta_cancel_button"
        android:text="@string/cacel"
        android:textColor="#6200ee"
        android:textSize="14sp" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:height="36dp"
        android:gravity="center"
        android:minWidth="64dp"
        android:layout_marginStart="8dp"
        android:paddingHorizontal="8dp"
        android:tag="beta_confirm_button"
        android:text="@string/update"
        android:textColor="#6200ee"
        android:textSize="14sp" />
    </LinearLayout>
  </LinearLayout>
</FrameLayout>


