<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:id="@+id/menu_wrapper"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingTop="72dp"
      android:paddingBottom="12dp">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_normal_click_feedback"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp">

        <io.nichijou.tujian.widget.TintIcon
          android:id="@+id/icon_requires_battery_not_low"
          android:layout_width="24dp"
          android:layout_height="24dp"
          app:layout_constraintBottom_toBottomOf="@id/view_requires_battery_not_low"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@id/label_requires_battery_not_low" />

        <TextView
          android:id="@+id/label_requires_battery_not_low"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="34dp"
          android:text="@string/requires_battery_not_low"
          android:textColor="?android:textColorPrimary"
          android:textSize="16sp"
          app:layout_constraintEnd_toStartOf="@id/view_requires_battery_not_low"
          app:layout_constraintStart_toEndOf="@id/icon_requires_battery_not_low"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/sub_requires_battery_not_low"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/requires_battery_not_low_desc"
          android:textColor="?android:textColorSecondary"
          app:layout_constraintEnd_toStartOf="@id/view_requires_battery_not_low"
          app:layout_constraintStart_toStartOf="@id/label_requires_battery_not_low"
          app:layout_constraintTop_toBottomOf="@id/label_requires_battery_not_low" />

        <androidx.appcompat.widget.SwitchCompat
          android:id="@+id/view_requires_battery_not_low"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="@id/sub_requires_battery_not_low"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="@id/label_requires_battery_not_low" />
      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_normal_click_feedback"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp">

        <io.nichijou.tujian.widget.TintIcon
          android:id="@+id/icon_requires_charging"
          android:layout_width="24dp"
          android:layout_height="24dp"
          app:layout_constraintBottom_toBottomOf="@id/view_requires_charging"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@id/label_requires_charging" />

        <TextView
          android:id="@+id/label_requires_charging"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="34dp"
          android:text="@string/requires_charging"
          android:textColor="?android:textColorPrimary"
          android:textSize="16sp"
          app:layout_constraintEnd_toStartOf="@id/view_requires_charging"
          app:layout_constraintStart_toEndOf="@id/icon_requires_charging"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/sub_requires_charging"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/requires_charging_desc"
          android:textColor="?android:textColorSecondary"
          app:layout_constraintEnd_toStartOf="@id/view_requires_charging"
          app:layout_constraintStart_toStartOf="@id/label_requires_charging"
          app:layout_constraintTop_toBottomOf="@id/label_requires_charging" />

        <androidx.appcompat.widget.SwitchCompat
          android:id="@+id/view_requires_charging"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="@id/sub_requires_charging"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="@id/label_requires_charging" />
      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_normal_click_feedback"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp">

        <io.nichijou.tujian.widget.TintIcon
          android:id="@+id/icon_requires_storage_not_low"
          android:layout_width="24dp"
          android:layout_height="24dp"
          app:layout_constraintBottom_toBottomOf="@id/view_requires_storage_not_low"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@id/label_requires_storage_not_low" />

        <TextView
          android:id="@+id/label_requires_storage_not_low"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="34dp"
          android:text="@string/requires_storage_not_low"
          android:textColor="?android:textColorPrimary"
          android:textSize="16sp"
          app:layout_constraintEnd_toStartOf="@id/view_requires_storage_not_low"
          app:layout_constraintStart_toEndOf="@id/icon_requires_storage_not_low"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/sub_requires_storage_not_low"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/requires_storage_not_low_desc"
          android:textColor="?android:textColorSecondary"
          app:layout_constraintEnd_toStartOf="@id/view_requires_storage_not_low"
          app:layout_constraintStart_toStartOf="@id/label_requires_storage_not_low"
          app:layout_constraintTop_toBottomOf="@id/label_requires_storage_not_low" />

        <androidx.appcompat.widget.SwitchCompat
          android:id="@+id/view_requires_storage_not_low"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="@id/sub_requires_storage_not_low"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="@id/label_requires_storage_not_low" />
      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_normal_click_feedback"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp">

        <io.nichijou.tujian.widget.TintIcon
          android:id="@+id/icon_requires_device_idle"
          android:layout_width="24dp"
          android:layout_height="24dp"
          app:layout_constraintBottom_toBottomOf="@id/view_requires_device_idle"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@id/label_requires_device_idle" />

        <TextView
          android:id="@+id/label_requires_device_idle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="34dp"
          android:text="@string/requires_device_idle"
          android:textColor="?android:textColorPrimary"
          android:textSize="16sp"
          app:layout_constraintEnd_toStartOf="@id/view_requires_device_idle"
          app:layout_constraintStart_toEndOf="@id/icon_requires_device_idle"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/sub_requires_device_idle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/requires_device_idle_desc"
          android:textColor="?android:textColorSecondary"
          app:layout_constraintEnd_toStartOf="@id/view_requires_device_idle"
          app:layout_constraintStart_toStartOf="@id/label_requires_device_idle"
          app:layout_constraintTop_toBottomOf="@id/label_requires_device_idle" />

        <androidx.appcompat.widget.SwitchCompat
          android:id="@+id/view_requires_device_idle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="@id/sub_requires_device_idle"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="@id/label_requires_device_idle" />
      </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
  </ScrollView>

  <io.nichijou.tujian.widget.TopBar
    android:id="@+id/top_bar"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    app:cardBackgroundColor="?android:windowBackground">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:background="?android:windowBackground"
      app:navigationIcon="?android:attr/homeAsUpIndicator"
      app:title="@string/muzei_settings"
      app:titleTextAppearance="@style/ToolbarTitleTextAppearance" />
  </io.nichijou.tujian.widget.TopBar>
</FrameLayout>
